k8s/repo-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: repo-service
  name: repo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repo-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: repo-service
    spec:
      containers:
      - image: hipravin/devcompanion-repo-service:latest
        imagePullPolicy: IfNotPresent
        name: devcompanion-repo-service
#        resources: {}
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8183
#          failureThreshold: ...
#          periodSeconds: ...
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8183
#          failureThreshold: ...
#          periodSeconds: ...

status: {}
