k8s/repo-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: repo-service
  name: repo-service
spec:
  ports:
  - name: 8182-8182
    port: 8182
    protocol: TCP
    targetPort: 8182
  - name: 8183-8183
    port: 8183
    protocol: TCP
    targetPort: 8183
  selector:
    app: repo-service
  type: ClusterIP
status:
  loadBalancer: {}
